# Drone

./: .gitignore  .gitmodules  README.md  motortest.py
drone_env/: pyvenv.cfg
install/: setup.sh
install/accelerometer_pkg/share/accelerometer_pkg/: package.ps1  package.sh
install/adxl345_node/share/adxl345_node/: package.bash  package.ps1  package.zsh
install/adxl345_node/share/adxl345_node/cmake/: adxl345_nodeConfig.cmake
install/fc_imu_pkg/share/fc_imu_pkg/: package.bash  package.dsv  package.ps1  package.zsh
microros_ws/install/: local_setup.sh  setup.sh
microros_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
microros_ws/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
microros_ws/install/micro_ros_agent/share/micro_ros_agent/: package.sh
microros_ws/log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/fc_motor_control/share/fc_motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/accelerometer_pkg/accelerometer_pkg/: setup.cfg  setup.py
ros2_ws/src/controller/: platformio.ini
ros2_ws/src/controller/src/: main.cpp
ros2_ws/src/fc_imu_pkg/: setup.py
ros2_ws/src/fc_motor_control/: setup.cfg  setup.py
ros2_ws/src/fc_motor_control/fc_motor_control/: fc_motor_control.py
ros2_ws/src/fc_motor_send_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/fc_motor_send_control/fc_motor_send_control/: fc_motor_send_control.py
src/fc_imu_pkg/: package.xml  setup.cfg
website/: main.html  style.css
(+20 files in other folders)
