<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fc_motor_control</name>
  <version>0.0.0</version>
  <description>To bridge between ROS2 and flight controller to receive the value from controller and control the motors</description>
  <maintainer email="mingjiehu5@gmail.com">orangepi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>pyserial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
